maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: illegal start of simple expression
		if ((!aMurOuest(i,j))&&(getIndication(i-1,j)==9999)) {
                ^JediEscaper:32: error: illegal start of simple expression
		if ((j!=getMondeHauteur-1)&&(!aMurNord(i,j+1))&&(getIndication(i,j+1)==9999)) {
                ^